2012-06-13 belangeo <belangeo@gmail.com>

    * Fixed issue 34 : Better handling of type exceptions for arguments waiting for PyoObject, PyoTableObject or list.
    - rev 1000

2012-06-08 belangeo <belangeo@gmail.com>

    * Added ChebyTable.getNormTable() method to retrieve the normalization function for the current polynomial.
    - rev 996

2012-05-31 belangeo <belangeo@gmail.com>

    * E-Pyo now creates its resources folder in the user home directory.
    - rev 991

2012-05-30 belangeo <belangeo@gmail.com>

    * Fixed PyoObject.set() method bug.
    - rev 987

2012-05-26 belangeo <belangeo@gmail.com>

    * Added new function: savefileFromTable(). Used internally by PyoTableObject to save sound to disk.
    - rev 983

2012-05-25 belangeo <belangeo@gmail.com>

    * Added two methods to PyoObject class: isPlaying() and isOutputting().
    - rev 979

2012-05-25 belangeo <belangeo@gmail.com>

    * Added debugging methods utilities: Server.getStreams(), Server.getNumberOfStreams() and Stream.getStreamObject().
    - rev 977

2012-05-24 belangeo <belangeo@gmail.com>

    * Fixed memory leak on object's deletion (refcount was always one more than expected).
    - rev 974

2012-05-10 belangeo <belangeo@gmail.com>

    * Removed printing to the console from pa_get_* and pm_get_* functions.
    - rev 973

2012-05-10 belangeo <belangeo@gmail.com>

    * Added new object: Vocoder. Vocoder effect.
    - rev 972

2012-05-09 belangeo <belangeo@gmail.com>

    * Ensures that every example in the examples folder that don't need audio input have the duplex mode set to 0.
    - rev 971

2012-05-09 belangeo <belangeo@gmail.com>

    * Added new object: MatrixRecLoop. Records samples in loop into a previously created NewMatrix.
    - rev 970

2012-05-08 belangeo <belangeo@gmail.com>

    * Fixed issue 30. Lin/Exp/Cos/CurveTable compare size with last position in the list and increase size if needed.
    - rev 969

2012-05-08 belangeo <belangeo@gmail.com>
